# purty

./: .bazelrc  .gitignore  .gitlab-ci.yml  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASES.md  WORKSPACE.bazel  appveyor.yml  package-lock.json  package.json  package.yaml  package_root.patch  purty-format.el  purty.el  rules_haskell.patch  snapshot.yaml  stack.yaml  stackage_snapshot.json
.gitlab/issue_templates/: RELEASE.md
ci/: bintray-linux.json  bintray-osx.json  bintray.dhall  bintray.json  install-stack.sh
ci/appveyor/: BUILD.bazel
ci/bintray/: create_tar.sh
ci/lint/: hlint.sh  ormolu.sh  stylish-haskell.sh
ci/npm/: BUILD.bazel  defs.bzl  package.dhall  package.json  prepack.sh  publish.sh
ci/travis/: BUILD.bazel  bintray.json  defs.bzl
cmd/: README.md
cmd/purs-format/: Args.hs  BUILD.bazel  Main.hs  Purty.hs  README.md
docs/explanations/: formatting.md
internal/: README.md
internal/error/: BUILD.bazel  README.md
internal/format/: Annotation.hs  BUILD.bazel  Format.hs  Span.hs
internal/log/: BUILD.bazel  Log.hs  README.md
internal/version/: BUILD.bazel  README.md  Version.hs  defs.bzl
lib/: AST.hs  Annotation.hs  App.hs  Args.hs  BUILD.bazel  Comment.hs  DataType.hs  Declaration.hs  Doc.hs  Env.hs  Error.hs  Exit.hs  Export.hs  File.hs  Fixity.hs  Foreign.hs  Format.hs  Import.hs  Kind.hs  Label.hs  List.hs  Log.hs  Module.hs  Name.hs  Output.hs  Purty.hs  SourceRange.hs  Span.hs  Synonym.hs  Type.hs  Variations.hs  Version.hs  defs.bzl
lib/Declaration/: Class.hs  DataType.hs  Fixity.hs  Foreign.hs  Instance.hs  Synonym.hs  Type.hs  Value.hs
lib/Doc/: Dynamic.hs  Static.hs
lib/Purty/: AST.hs
lib/Purty/Doc/: Dynamic.hs  Static.hs
pkg/: README.md
pkg/cst/: BUILD.bazel  CST.hs  README.md  SourceRange.hs
src/: Args.hs  BUILD.bazel  Doc.hs  Main.hs
test/: acceptance.sh
test/acceptance/: BUILD.bazel  Unformatted.purs  filepath.sh  suite.sh
test/acceptance/directories/formatted/: Formatted.purs
test/acceptance/directories/nested/: Baz.purs
test/acceptance/directories/unformatted/: Unformatted1.purs  Unformatted2.purs
test/acceptance/failing/: Unparsable.purs
test/acceptance/passing/: Test.purs
test/golden/: BUILD.bazel  Main.hs  defs.bzl
test/golden/files/: DataWithParameters.purs  EmptyData.purs  Imports.purs  Instance.purs  MPTCHead.purs  Merge.purs  NewtypeRecord.purs  RecordPuns.purs  SProxy.purs  TypeClass.purs  TypeSynonym.purs  TypeSynonymNewline.purs
test/golden/files/dynamic/: Ado.purs  BoundValue.purs  Char.purs  Comments.purs  DoAndIfThenElse.purs  Exports.purs  GuardedValue.purs  Imports.purs  InfixExpression.purs  Instance.purs  InstanceChain.purs  Lambda.purs  Let.purs  LongTypeSignature.purs  MPTCHead.purs  ModuleHeader.purs  OpenRecordTypes.purs  QuotedLabel.purs  RecordPuns.purs  RecordUpdates.purs  TypeClass.purs  TypeSynonymNewline.purs
test/golden/files/formatted/: Ado.purs  Array.purs  BoundValue.purs  Char.purs  Comments.purs  DataWithParameters.purs  DoAndIfThenElse.purs  Exports.purs  Guards.purs  HTML.purs  Hole.purs  If.purs  Imports.purs  InfixBreaking.purs  Instance.purs  InstanceChain.purs  KindSignature.purs  Kinded.purs  Let.purs  LongTypeSignature.purs  NewtypeRecord.purs  OpenRecordTypes.purs  OpenRows.purs  OperatorPattern.purs  Operators.purs  ParenthesesIndentation.purs  ParenthesizedFunctions.purs  QuotedLabel.purs  RecordProperty.purs  RecordPuns.purs  RecordUpdates.purs  Role.purs  SProxy.purs  String.purs  TypeSynonym.purs  TypeSynonymNewline.purs  Typed.purs  Where.purs
test/golden/files/original/: Ado.purs  Array.purs  Booleans.purs  Char.purs  Comments.purs  DataWithParameters.purs  DoAndIfThenElse.purs  EmptyData.purs  Exports.purs  Fixity.purs  Guards.purs  HTML.purs  If.purs  Imports.purs  InfixBreaking.purs  InfixExpression.purs  Instance.purs  KindSignature.purs  Kinded.purs  Lambda.purs  Let.purs  LongTypeSignature.purs  OpenRecordTypes.purs  OpenRows.purs  ParenthesesIndentation.purs  RecordPuns.purs  RecordUpdates.purs  Role.purs  TypeSynonymNewline.purs  Typed.purs  UnaryMinus.purs
test/golden/files/static/: Ado.purs  BoundValue.purs  Char.purs  Comments.purs  DoAndIfThenElse.purs  EmptyData.purs  Exports.purs  Imports.purs  InfixExpression.purs  Instance.purs  InstanceChain.purs  Let.purs  LongTypeSignature.purs  MPTCHead.purs  ModuleHeader.purs  NewtypeRecord.purs  OpenRecordTypes.purs  OperatorPattern.purs  ParenthesizedFunctions.purs  QuotedLabel.purs  RecordPuns.purs  SProxy.purs  TypeClass.purs  TypeSynonym.purs  TypeSynonymNewline.purs  Where.purs
test/properties/: Main.hs
test/property/: Main.hs
test/unit/: Main.hs
tools/alex/: alex.BUILD
tools/bazel/: defs.bzl
tools/happy/: happy.BUILD
tools/hlint/: BUILD.bazel  deps.bzl  hlint.bzl  linux.BUILD  windows.BUILD
tools/ormolu/: BUILD.bazel  deps.bzl  format.sh  ormolu.BUILD  ormolu.bzl
tools/rules_haskell/: ignore-unix-on-windows.patch
version/: BUILD.bazel
