config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "macos",
    constraint_values = [
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
)

exports_files([
    ".hlint.yaml",
], visibility = [
    "//:__subpackages__",
],
)

test_suite(
    name = "lint",
    tags = [
        "lint",
    ],
    tests = [
        "//lib:lint",
        "//src:lint",
    ],
)
