workspace(
    name = "com_gitlab_joneshf_purty",
)

# Basic loads

load(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

# Archives and repositories

http_archive(
    name = "bazel_skylib",
    sha256 = "97e70364e9249702246c0e9444bccdc4b847bed1eb03c5a3ece4f83dfe6abc44",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
    ],
)

http_archive(
    name = "build_bazel_rules_nodejs",
    sha256 = "d0c4bb8b902c1658f42eb5563809c70a06e46015d64057d25560b0eb4bdc9007",
    urls = [
        "https://github.com/bazelbuild/rules_nodejs/releases/download/1.5.0/rules_nodejs-1.5.0.tar.gz",
    ],
)

http_archive(
    build_file = "//tools/alex:alex.BUILD",
    name = "alex",
    sha256 = "d58e4d708b14ff332a8a8edad4fa8989cb6a9f518a7c6834e96281ac5f8ff232",
    strip_prefix = "alex-3.2.4",
    urls = [
        "https://hackage.haskell.org/package/alex-3.2.4/alex-3.2.4.tar.gz",
    ],
)

http_archive(
    build_file = "//tools/happy:happy.BUILD",
    name = "happy",
    sha256 = "3e81a3e813acca3aae52721c412cde18b7b7c71ecbacfaeaa5c2f4b35abf1d8d",
    strip_prefix = "happy-1.19.9",
    urls = [
        "https://hackage.haskell.org/package/happy-1.19.9/happy-1.19.9.tar.gz",
    ],
)

http_archive(
    name = "rules_haskell",
    sha256 = "4d9e3a87ffada5e6417b7fe9ac84a80a7e817e3a044be57ca25da376edb2d0c7",
    strip_prefix = "rules_haskell-0.13",
    urls = [
        "https://github.com/tweag/rules_haskell/archive/v0.13.zip",
    ],
)

http_archive(
    name = "rules_pkg",
    sha256 = "352c090cc3d3f9a6b4e676cf42a6047c16824959b438895a76c2989c6d7c246a",
    urls = [
        "https://github.com/bazelbuild/rules_pkg/releases/download/0.2.5/rules_pkg-0.2.5.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.2.5/rules_pkg-0.2.5.tar.gz",
    ],
)

http_archive(
    name = "purescript_ast",
    build_file = "//third_party/purescript-ast:purescript-ast.BUILD",
    patch_args = [
        "-p1",
    ],
    patches = [
        "//third_party/purescript-ast:purescript-ast-cabal-file.patch",
    ],
    strip_prefix = "purescript-81909a9585b00bc99cc47c7959fbc5ae2e1ff285/lib/purescript-ast",
    sha256 = "f2d685b754d93328fd2d175af0748f6f3bce7335c5d14157427876df38b566c3",
    urls = [
        "https://github.com/joneshf/purescript/archive/81909a9585b00bc99cc47c7959fbc5ae2e1ff285.zip",
    ],
)

http_archive(
    name = "purescript_cst",
    build_file = "//third_party/purescript-cst:purescript-cst.BUILD",
    patch_args = [
        "-p1",
    ],
    patches = [
        "//third_party/purescript-cst:purescript-cst-cabal-file.patch",
    ],
    strip_prefix = "purescript-81909a9585b00bc99cc47c7959fbc5ae2e1ff285/lib/purescript-cst",
    sha256 = "f2d685b754d93328fd2d175af0748f6f3bce7335c5d14157427876df38b566c3",
    urls = [
        "https://github.com/joneshf/purescript/archive/81909a9585b00bc99cc47c7959fbc5ae2e1ff285.zip",
    ],
)

# Dependencies

load(
    "@bazel_skylib//:workspace.bzl",
    "bazel_skylib_workspace",
)

bazel_skylib_workspace()

load(
    "@build_bazel_rules_nodejs//:index.bzl",
    "node_repositories",
)

node_repositories()

load(
    "//tools/hlint:deps.bzl",
    "hlint_dependencies",
)

hlint_dependencies()

load(
    "@rules_haskell//haskell:repositories.bzl",
    "rules_haskell_dependencies",
)

rules_haskell_dependencies()

load(
    "@rules_pkg//:deps.bzl",
    "rules_pkg_dependencies",
)

rules_pkg_dependencies()

load(
    "//tools/ormolu:deps.bzl",
    "ormolu_dependencies",
)

ormolu_dependencies()

# Toolchains

# Rules

load(
    "@rules_haskell//haskell:cabal.bzl",
    "stack_snapshot",
)

load(
    "@rules_haskell//haskell:toolchain.bzl",
    "rules_haskell_toolchains",
)

rules_haskell_toolchains(
    version = "8.6.5",
)

stack_snapshot(
    local_snapshot = "//:snapshot.yaml",
    name = "stackage",
    packages = [
        # our dependencies
        "componentm",
        "optparse-applicative",
        "pathwalk",
        "rio",
        # `purescript-ast` dependencies
        # These have to be here so the `//third_party/purescript:purescript-ast` package can pick them up.
        # If we ever can get rid of the `//third_party/purescript:purescript-ast` package,
        # we can remove these dependencies
        "aeson",
        "base",
        "base-compat",
        "bytestring",
        "containers",
        "deepseq",
        "filepath",
        "microlens-platform",
        "mtl",
        "protolude",
        "scientific",
        "text",
        "vector",
        # `purescript-cst` dependencies
        # These have to be here so the `//third_party/purescript:purescript-cst` package can pick them up.
        # If we ever can get rid of the `//third_party/purescript:purescript-cst` package,
        # we can remove these dependencies
        "array",
        "base",
        "containers",
        "dlist",
        "scientific",
        "semigroups",
        "text",
    ],
    stack_snapshot_json = "//:stackage_snapshot.json",
    tools = [
        "@alex",
        "@happy",
    ],
    vendored_packages = {
        "purescript-ast": "@purescript_ast//:purescript-ast",
        "purescript-cst": "@purescript_cst//:purescript-cst",
    },
)
