load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_toolchain_library",
)

load(
    "//tools/hlint:hlint.bzl",
    "hlint_test",
)

load(
    "//tools/ormolu:ormolu.bzl",
    "ormolu_format",
    "ormolu_test",
)

haskell_library(
    compiler_flags = [
        "-Wall",
        "-Wcompat",
        "-Werror",
        "-Wincomplete-record-updates",
        "-Wincomplete-uni-patterns",
        "-Wmissing-methods",
        "-Wredundant-constraints",
    ],
    deps = [
        "//internal/version:haskell",
        ":base",
        ":bytestring",
        "@stackage//:componentm",
        "@stackage//:optparse-applicative",
        "@stackage//:pathwalk",
        "@stackage//:purescript-cst",
        "@stackage//:rio",
    ],
    name = "purty",
    srcs = [
        "Annotation.hs",
        "Args.hs",
        "Error.hs",
        "Format.hs",
        "Log.hs",
        "Purty.hs",
        "SourceRange.hs",
        "Span.hs",
    ],
    visibility = [
        "//:__subpackages__",
    ],
)

haskell_toolchain_library(
    name = "base",
)

haskell_toolchain_library(
    name = "bytestring",
)

hlint_test(
    name = "lint-hlint",
    srcs = [
        "Annotation.hs",
        "Args.hs",
        "Error.hs",
        "Format.hs",
        "Log.hs",
        "Purty.hs",
        "SourceRange.hs",
        "Span.hs",
    ],
)

ormolu_format(
    name = "format-ormolu",
    srcs = [
        "Annotation.hs",
        "Args.hs",
        "Error.hs",
        "Format.hs",
        "Log.hs",
        "Purty.hs",
        "SourceRange.hs",
        "Span.hs",
    ],
)

ormolu_test(
    name = "lint-ormolu",
    srcs = [
        "Annotation.hs",
        "Args.hs",
        "Error.hs",
        "Format.hs",
        "Log.hs",
        "Purty.hs",
        "SourceRange.hs",
        "Span.hs",
    ],
)

test_suite(
    name = "lint",
    tags = [
        "lint",
    ],
    tests = [
        ":lint-hlint",
        ":lint-ormolu",
    ],
)
