load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_toolchain_library",
)

load(
    "//lib:defs.bzl",
    "version_purty",
)

load(
    "//tools/hlint:hlint.bzl",
    "hlint_test",
)

load(
    "//tools/ormolu:ormolu.bzl",
    "ormolu_format",
    "ormolu_test",
)

haskell_binary(
    compiler_flags = [
        "-O2",
        "-Wall",
        "-Wcompat",
        "-Werror",
        "-Wincomplete-record-updates",
        "-Wincomplete-uni-patterns",
        "-Wmissing-methods",
        "-Wredundant-constraints",
        "-optc=-static",
        "-optl=-pthread",
        "-rtsopts",
        "-static",
        "-threaded",
        "-with-rtsopts=-N",
    ] + select({
        "//:linux": [
            "-optl=-static",
        ],
        "//conditions:default": [
        ],
    }),
    deps = [
        ":base",
        "//lib:purty",
    ],
    name = "purty",
    srcs = [
        "Main.hs",
    ],
    visibility = [
        "//:__subpackages__",
    ],
)

haskell_toolchain_library(
    name = "base",
)

hlint_test(
    name = "lint-hlint",
    srcs = [
        "Main.hs",
    ],
)

ormolu_format(
    name = "format-ormolu",
    srcs = [
        "Main.hs",
    ],
)

ormolu_test(
    name = "lint-ormolu",
    srcs = [
        "Main.hs",
    ],
)

test_suite(
    name = "lint",
    tags = [
        "lint",
    ],
    tests = [
        ":lint-hlint",
        ":lint-ormolu",
    ],
)
