load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
)

load(
    "//tools/hlint:hlint.bzl",
    "hlint_test",
)

load(
    "//tools/ormolu:ormolu.bzl",
    "ormolu_format",
    "ormolu_test",
)

package(
    default_visibility = [
        "//cmd:__subpackages__",
        "//internal:__subpackages__",
        "//pkg:__subpackages__",
    ],
)

haskell_library(
    compiler_flags = [
        "-Wall",
        "-Wcompat",
        "-Werror",
        "-Wincomplete-record-updates",
        "-Wincomplete-uni-patterns",
        "-Wmissing-methods",
        "-Wredundant-constraints",
    ],
    deps = [
        "@stackage//:purescript-cst",
        "@stackage//:rio",
    ],
    name = "haskell",
    package_name = "purs-tool-cst",
    srcs = [
        "SourceRange.hs",
    ],
)

hlint_test(
    name = "lint-hlint",
    srcs = [
        "SourceRange.hs",
    ],
)

ormolu_format(
    name = "format-ormolu",
    srcs = [
        "SourceRange.hs",
    ],
)

ormolu_test(
    name = "lint-ormolu",
    srcs = [
        "SourceRange.hs",
    ],
)

test_suite(
    name = "lint",
    tags = [
        "lint",
    ],
    tests = [
        ":lint-hlint",
        ":lint-ormolu",
    ],
)
