load(
    "//internal/version:defs.bzl",
    "version_purty",
)

filegroup(
    name = "test_files",
    srcs = glob([
        "**",
    ]),
)

sh_test(
    args = [
        "--expected-version {version}".format(
            version = version_purty,
        ),
        "--purty $(location //cmd/purs-format:purty)",
        "--verbose",
    ],
    data = [
        "//cmd/purs-format:purty",
        ":test_files",
    ],
    name = "binary",
    srcs = [
        "suite.sh",
    ],
    tags = [
        "coverage_requires_jvm",
        "test_requires_bash",
    ],
)

sh_test(
    args = [
        "--expected-version {version}".format(
            version = version_purty,
        ),
        "--purty $(location //bin:purty)",
        "--verbose",
    ],
    data = [
        "//bin:purty",
        ":test_files",
    ],
    name = "npm",
    srcs = [
        "suite.sh",
    ],
    tags = [
        "coverage_requires_jvm",
        "test_requires_bash",
    ],
)
