load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_test",
)

haskell_test(
    data = glob([
        "files/formatted/*.purs",
        "files/original/*.purs",
    ]),
    deps = [
        "//lib:purty",
        "//vendor/rules_haskell/tools/runfiles:bazel-runfiles",
        "@stackage//:bytestring",
        "@stackage//:componentm",
        "@stackage//:pathwalk",
        "@stackage//:rio",
        "@stackage//:tasty",
        "@stackage//:tasty-golden",
        "@stackage//:tasty-hunit",
    ],
    name = "purty",
    srcs = [
        "Main.hs",
    ],
)
